# cat_tv

./: .env.example  LICENSE  README.md  debug_display.py  debug_vlc.py  index.js  install.sh  package-lock.json  package.json  pyproject.toml  setup-port-forward.sh  setup-smb.sh  start.sh  stop.sh  test_display.py  test_display_advanced.py  test_display_control.py  test_display_modern.py  test_display_simple.py  test_pi_connect.py  test_schedule_time.py  test_scheduler.py  test_youtube.py
src/cat_tv/: TODO.txt  __init__.py  app.py  config.py  display.py  main.py  player.py  scheduler.py  web.py  youtube.py
src/cat_tv/models/: __init__.py  base.py  channel.py  playback_log.py  schedule.py
src/cat_tv/static/css/: style.css
src/cat_tv/static/js/: main.js
src/cat_tv/templates/: index.html
systemd/: cat-tv.service
